# farmanager-api-rust-bindings

./: .editorconfig  .gitignore  Cargo.toml  README.md
examples/: Cargo.toml
examples/hellorust/: Cargo.toml
examples/hellorust/src/: hellorust_en.hlf  hellorust_ru.hlf  lib.rs  lng.rs
examples/showcase/: Cargo.toml  build.rs
examples/showcase/src/: lib.rs  lng.rs  showcase_en.hlf  showcase_ru.hlf
farmanager/: Cargo.toml
farmanager/src/: basic.rs  common.rs  dialog.rs  editor.rs  ffi.rs  lib.rs  misc.rs  panel.rs  settings.rs  viewer.rs
farmanager/src/basic/: ctx.rs
farmanager/src/common/: ffi.rs  string.rs
farmanager/src/panel/: control.rs  ctx.rs  filter.rs  wrapper.rs
farmanager_build/: Cargo.toml
farmanager_build/src/: lib.rs  lng.rs
farmanager_codegen/: Cargo.toml
farmanager_codegen/src/: lib.rs
utils/: generate_bindings.bat
